dev/manifests/cluster-config/mutating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "kubernetes-metadata-injector.acme.com"
webhooks:
  - name: "kubernetes-metadata-injector.acme.com"
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["services"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: kubernetes-metadata-injector
        path: /mutate-svc
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTVENDQWpHZ0F3SUJBZ0lVVlhycFpuQ2ho
[...]
        LS0K
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
